crates/itc/tests/ui/clock_borrow_bitor.stderr
error[E0369]: no implementation for `&itc::Clock | &itc::Clock`
  --> tests/ui/clock_borrow_bitor.rs:10:22
   |
10 |     let _merged = &a | &b;
   |                   -- ^ -- &itc::Clock
   |                   |
   |                   &itc::Clock
